Change CV privacy text, change home video text to darker grey, scale home How it Works icon on mobile, add employer dashboard top nav icons, padding fix, change role text & input border

--- a/resources/assets/sass/_responsive.scss
+++ b/resources/assets/sass/_responsive.scss
@@ -408,6 +408,16 @@
             overflow-y: unset !important;
         }
 
+        .how-works-icon
+        {
+            .img-responsive
+            {
+                width: 50%;
+                margin-left: auto;
+                margin-right: auto;
+            }
+        }
+
 
 }
 
