--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -3,6 +3,7 @@
 	$red:        		#b53038;
 	$red-two: 			#d9343e;
 	$dark-grey:  		#2d2d2d;
+    $dark-grey-two:     #575654;
 	$darker-grey: 		#404040;
 	$light-grey: 		#f5f5f5;
 	$light-grey-two: 	#f4f5f8;
