--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -596,7 +596,7 @@ a.firmlink:focus, a.firmlink:hover {
         color: $dark-grey;
         line-height: 50px;
         font-size: 40px;
-        color: #575654;
+        color: $dark-grey-two;
         span{
             color: $red-two;
         }
@@ -614,12 +614,22 @@ a.firmlink:focus, a.firmlink:hover {
         color: $red-two;
         font-weight: 200;
         margin-bottom: 30px;
-        &.light-grey { color: $grey-two; }
     }
     .fa{
         color: #4c4c4c;
         font-size: 60px;
         margin-bottom: 30px;
+    }
+}
+
+.home
+{
+    .central-text-block
+    {
+        h2
+        {
+            color: $dark-grey-two;
+        }
     }
 }
 
@@ -779,14 +789,22 @@ body.blog
     }
 }
 
-    .contact-column{
-        text-align: center;
-        margin-bottom: 30px; 
-        .fa{
-            font-size: 60px;
-            margin-top: 20px;
-        }
+.contact-column{
+    text-align: center;
+    margin-bottom: 30px; 
+    .fa{
+        font-size: 60px;
+        margin-top: 20px;
     }
+}
+
+body.contact
+{
+    .full-width-centered
+    {
+        padding: 20px 0;
+    }
+}
 
 .media-left, .media > .pull-left {
     padding-right: 30px;
